[ADD]회원가입초기html, url세팅

--- a/src/main/resources/templates/hello-template.html
+++ b/src/main/resources/templates/hello-template.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmln:th="http://www.thymeleaf.org">
+<html xmln:th="http://www.thymeleaf.org" xmlns:xmln="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.w3.org/1999/xhtml">
 <body>
   <p th:text="'hello ' + ${name}">hello! empty</p>
 </body>
