--- a/src/main/resources/templates/join_complete.html
+++ b/src/main/resources/templates/join_complete.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <title>STEP4 회원가입완료 | 성신여대청원사이트</title>
+    <meta charset="UTF-8">
+    <title>STEP3 회원가입완료 | 성신여대청원사이트</title>
     <style>
         body {
          background-color: rgb(243,243,243);
@@ -86,16 +87,12 @@
                         STEP1<th>회원약관동의</th>
                     </th>
                     <th> &nbsp;>>&nbsp; </th>
-                    <th class="i2" title="STEP 2 - 회원인증" >
-                        STEP2<th>회원인증</th>
-                    </th>
-                    <th> &nbsp;>>&nbsp; </th>
                     <th class="i3" title="STEP 3 - 회원정보입력" >
-                        STEP3<th>회원정보입력</th>
+                        STEP2<th>회원정보입력</th>
                     </th>
                     <th> &nbsp;>>&nbsp; </th>
                     <th class="i4" title="STEP 4 - 회원가입완료" style="color:#1452a3;">
-                        STEP4<th style="color:#1452a3;">회원가입완료</th>
+                        STEP3<th style="color:#1452a3;">회원가입완료</th>
                     </th>
                 </tr>
             </table>
