--- a/src/main/resources/templates/join_terms.html
+++ b/src/main/resources/templates/join_terms.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+    <meta charset="UTF-8">
     <title>STEP1 회원약관동의 | 성신여대청원사이트</title>
     <style>
         body {
@@ -89,17 +90,14 @@
                     STEP1<th style="color:#1452a3;">회원약관동의</th>
                 </th>
                 <th> &nbsp;>>&nbsp; </th>
-                <th class="i2" title="STEP 2 - 회원인증">
-                    STEP2<th>회원인증</th>
+                <th class="i3" title="STEP 2 - 회원정보입력">
+                    STEP2<th>회원정보입력</th>
                 </th>
                 <th> &nbsp;>>&nbsp; </th>
-                <th class="i3" title="STEP 3 - 회원정보입력">
-                    STEP3<th>회원정보입력</th>
+                <th class="i4" title="STEP 3 - 회원가입완료">
+                    STEP3<th>회원가입완료</th>
                 </th>
-                <th> &nbsp;>>&nbsp; </th>
-                <th class="i4" title="STEP 4 - 회원가입완료">
-                    STEP4<th>회원가입완료</th>
-                </th>
+
             </tr>
         </table>
         <br>
@@ -130,7 +128,7 @@
         <br><br>
         <label for="chk_agree"><input type="checkbox" id="chk_agree"> 모든 약관에 동의합니다.</label>
         <br><br>
-        <button type="submit"  onClick="location.href='3_memberVerify.html'" class="b-basic-1" >동의합니다</button>
+        <button type="submit"  onClick="location.href='join_meminfo.html'" class="b-basic-1" >동의합니다</button>
         <button type="submit" onclick="javascript: ;" class="b-basic-2">동의하지않습니다</button>
         <br><br><br>
 
