[ADD] 클릭 시 url 연결

--- a/src/main/resources/templates/join_complete.html
+++ b/src/main/resources/templates/join_complete.html
@@ -64,10 +64,10 @@
 </head>
 <body>
 <header>
-    <span id="title"><a href="#">성신여대 청원</a></span>
+    <span id="title"><a href="/">성신여대 청원</a></span>
     <span id="nav">
-          <li><a href="login.html">로그인</a></li>
-          <li><a href="2_memberAgree.html">회원가입</a></li>
+          <li><a href="/member/login">로그인</a></li>
+          <li><a href="/member/join">회원가입</a></li>
           <li><a href="#">아이디 찾기</a></li>
           <li><a href="#">비밀번호 찾기</a></li>
         </span>
@@ -102,8 +102,8 @@
 
             <div style="font-size:30px; font-weight: bolder;"> 회원가입이 완료되었습니다.</div>
             <br>
-            <button type="submit" onclick="location.href='login.html'" class="b-basic-1">로그인</button>
-            <button type="submit" onclick="location.href='index.html'" class="b-basic-2">메인으로 이동</button>
+            <button type="submit" onclick="location.href='/member/login'" class="b-basic-1">로그인</button>
+            <button type="submit" onclick="location.href='/'" class="b-basic-2">메인으로 이동</button>
 
             <br><br>
         </div>
