--- a/src/main/resources/templates/join_meminfo.html
+++ b/src/main/resources/templates/join_meminfo.html
@@ -74,10 +74,10 @@
 </head>
 <body>
 <header>
-    <span id="title"><a href="#">성신여대 청원</a></span>
+    <span id="title"><a href="/">성신여대 청원</a></span>
     <span id="nav">
-          <li><a href="login.html">로그인</a></li>
-          <li><a href="2_memberAgree.html">회원가입</a></li>
+          <li><a href="/member/login">로그인</a></li>
+          <li><a href="/member/join">회원가입</a></li>
           <li><a href="#">아이디 찾기</a></li>
           <li><a href="#">비밀번호 찾기</a></li>
         </span>
@@ -97,12 +97,16 @@
                         STEP1<th>회원약관동의</th>
                     </th>
                     <th> &nbsp;>>&nbsp; </th>
-                    <th class="i3" title="STEP 2 - 회원정보입력" style="color:#1452a3;">
-                        STEP2<th style="color:#1452a3;">회원정보입력</th>
+                    <th class="i2" title="STEP 2 - 회원인증">
+                        STEP2<th>회원인증</th>
                     </th>
                     <th> &nbsp;>>&nbsp; </th>
-                    <th class="i4" title="STEP 3 - 회원가입완료">
-                        STEP3<th>회원가입완료</th>
+                    <th class="i3" title="STEP 3 - 회원정보입력" style="color:#1452a3;">
+                        STEP3<th style="color:#1452a3;">회원정보입력</th>
+                    </th>
+                    <th> &nbsp;>>&nbsp; </th>
+                    <th class="i4" title="STEP 4 - 회원가입완료">
+                        STEP4<th>회원가입완료</th>
                     </th>
                 </tr>
             </table>
@@ -111,11 +115,19 @@
             <br>
             <div class="i_i3">회원정보입력</div><br>
             <article style="text-align: left; padding-left: 100px;" >
-                <input type="text" placeholder="성명">
+                <input type="text" placeholder="성명"><br>
+                <select>
+                    <option>==========학과==========</option>
+                    <option>융합보안공학과</option>
+                    <option>컴퓨터공학과</option>
+                    <option></option>
+                    <option></option>
+                    <option></option>
+                </select>
                 <br>
-                <input type="text" placeholder="Gmail">
+                <input type="text" placeholder="Gmail"> <!--앞에서 인증한 메일주소 띄우기 기능 구현 필요-->
                 <br>
-                <input type="text" placeholder="닉네임">
+                <input type="text" placeholder="아이디">
                 <button type="button" value="중복확인" onClick="#" style="height:30px; background-color:#adadad; 
                         border:none; border-radius:5px;">중복확인</button>
                 <br>
@@ -127,7 +139,7 @@
                         border:none; border-radius:5px;">일치확인</button>
                 <!--자바스크립트로 비밀번호 일치 여부 확인해서 다르면 오류메시지-->
                 <br><br>
-                <button type="submit" onclick="location.href='join_complete.html'" class="b-basic">가입하기</button>
+                <button type="submit" onclick="location.href='/member/join_complete'" class="b-basic">가입하기</button>
 
             </article>
 
