--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -76,10 +76,10 @@
 
 <body>
 <header>
-    <span id="title"><a href="#">성신여대 청원</a></span>
+    <span id="title"><a href="/">성신여대 청원</a></span>
     <span id="nav">
-          <li><a href="login.html">로그인</a></li>
-          <li><a href="2_memberAgree.html">회원가입</a></li>
+          <li><a href="/member/login">로그인</a></li>
+          <li><a href="/member/join">회원가입</a></li>
           <li><a href="#">아이디 찾기</a></li>
           <li><a href="#">비밀번호 찾기</a></li>
         </span>
