회원 정보 저장 성공, application.properties 파일 구조 변경(yml -> properties)

--- a/src/main/resources/templates/join_complete.html
+++ b/src/main/resources/templates/join_complete.html
@@ -66,8 +66,8 @@
 <header>
     <span id="title"><a href="/">성신여대 청원</a></span>
     <span id="nav">
-          <li><a href="/member/login">로그인</a></li>
-          <li><a href="/member/join">회원가입</a></li>
+          <li><a href="/members/login">로그인</a></li>
+          <li><a href="/members/join">회원가입</a></li>
           <li><a href="#">아이디 찾기</a></li>
           <li><a href="#">비밀번호 찾기</a></li>
         </span>
@@ -102,7 +102,7 @@
 
             <div style="font-size:30px; font-weight: bolder;"> 회원가입이 완료되었습니다.</div>
             <br>
-            <button type="submit" onclick="location.href='/member/login'" class="b-basic-1">로그인</button>
+            <button type="submit" onclick="location.href='/members/login'" class="b-basic-1">로그인</button>
             <button type="submit" onclick="location.href='/'" class="b-basic-2">메인으로 이동</button>
 
             <br><br>
