--- a/src/main/resources/templates/join_terms.html
+++ b/src/main/resources/templates/join_terms.html
@@ -127,7 +127,7 @@
         <br><br>
         <label for="chk_agree"><input type="checkbox" id="chk_agree"> 모든 약관에 동의합니다.</label>
         <br><br>
-        <button type="submit"  onClick="location.href='/member/join_meminfo'" class="b-basic-1" >동의합니다</button>
+        <button type="submit"  onClick="location.href='/members/join_meminfo'" class="b-basic-1" >동의합니다</button>
         <button type="submit" onclick="javascript: ;" class="b-basic-2">동의하지않습니다</button>
         <br><br><br>
 
