로그인 구현 성공, 로그인용 뷰는 없음, 체험을 위한 도메인 연결? 조건 : 같은 와이파이 사용 중 ipconfig getifaddr en0 - 터미널 입력 후 나오는 ip주소:8084 를 도메인으로 바꾼 후 도메인 주소 알려주며 실행

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -91,14 +91,14 @@
     <div class="s">
         <div class="container">
             <div class="login-set">
-                <div class="login-box">
+                <form class="login-box" th:method="post" th:action="@{/members/isValidAccount}" th:object="${loginInfo}">
                     <p>&nbsp;</p>
-                    <dl><dd><input type="text" id="loginId" title="아이디" name="loginId" value="" placeholder="아이디" autofocus=""></dd></dl>
-                    <dl><dd><input type="password" id="loginPwdText" title="패스워드" name="loginPwdText" value="" placeholder="패스워드" autocomplete="new-password"></dd></dl>
+                    <dl><dd><input type="text" placeholder="이메일" autofocus="" th:field="*{email}"></dd></dl>
+                    <dl><dd><input type="password" placeholder="패스워드" autocomplete="new-password" th:field="*{password}"></dd></dl>
                     <p><label for="chk_idsave"><input type="checkbox" id="chk_idsave"> ID 저장</label></p>
-                    <button type="submit" onclick="javascript: loginProc();" class="b-basic">로그인</button>
+                    <button type="submit" class="b-basic">로그인</button>
                     <p>&nbsp;</p>
-                </div>
+                </form>
             </div>
 
         </div>
